# pia

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  tox.ini
.config/: requirements.in  requirements.txt
.github/workflows/: release.yml  tox.yml
src/pia/: __init__.py  __main__.py  proc.py
test/: __init__.py  test_cli.py
